--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,10 +44,10 @@ body{
   flex-direction: column;
   text-align: center;
   width: 21.4rem;
-  height: 17.5rem ;
-  box-shadow: 30px 50px 80px 0px var(--container-shadow);
+  height: auto;
+  box-shadow: 30px 50px 50px 0px var(--container-shadow);
   border-radius: 10px;
-  padding: 2.5rem;
+  padding: 2.5rem 2.5rem 0 2.5rem;
 }
 
 p{
@@ -66,7 +66,7 @@ h1{
 }
 
 img{
-  margin-bottom: 1.5rem;
+  margin-bottom: 0rem;
 }
 
 .dice {
@@ -77,7 +77,7 @@ img{
   border-radius: 100%;
   position: relative;
   left: 6.0rem;
-  top: 0.25rem;
+  top: 2rem;
   transition: box-shadow 0.5s ease-in;
 }
 
@@ -99,4 +99,32 @@ img{
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+/* Media Queries */
+@media(min-width: 35rem){
+  .container{
+    width: 33.75rem;
+    height: auto;
+  }
+
+  p{
+    font-size: 0.85rem;
+  }
+
+  h1{
+    font-size: 1.75rem;
+    line-height: 2.25rem;
+  }
+
+  .dice {
+    left: 12.2rem;
+    top: 2rem;
+  }
+}
+
+@media(min-width: 75rem){
+  .container{
+    margin-top: 15%;
+  }
 }
